# factorial-design

./: pyproject.toml
src/: __main__.py  factorial2k.py
tests/: test_factorial2k.py
