[tool.poetry]
name = "factorial-design"
version = "0.1.0"
description = ""
authors = ["kundlatsch <gustavo.kundlatsch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyDOE2 = "^1.3.0"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
